--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,68 @@
     transform: rotate(360deg);
   }
 }
+
+.box{
+  width: 500px;
+  height: 100px;
+  border: 3px solid black;
+  
+}
+
+.driver-box{
+  border-radius: 10px;
+  text-align: left;
+  width: 800px;
+  height: 200px;
+  background-color: #61dafb;
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+ 
+}
+
+.driver-box-text { 
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+
+}
+
+.driver-box p {
+  margin-top: -10px;
+}
+
+.driver-box img {
+  border-radius: 50%;
+  
+}
+
+.stars {
+  margin-top: -10px;
+}
+
+.like-button {
+  margin-top: 20px;
+  width: 100px;
+  height: 50px;
+  font-size: 1.2em;
+}
+
+.glasses-img{
+  cursor: pointer;
+}
+
+.num-table{
+  border-collapse: collapse; 
+  width: 100%;
+  height: 400px;
+  border: 5px solid;
+}
+
+.num-table td{
+  border: 1px solid;
+  vertical-align: bottom;
+}
+
