--- a/src/App.css
+++ b/src/App.css
@@ -91,7 +91,7 @@
 
 .num-table{
   border-collapse: collapse; 
-  width: 100%;
+  width: 50%;
   height: 400px;
   border: 5px solid;
 }
@@ -99,5 +99,85 @@
 .num-table td{
   border: 1px solid;
   vertical-align: bottom;
+  width: 30%;
+}
+
+.facebook-user{
+  margin-top: 30px;
+  margin-bottom: 30px;
+  margin-left: 20px;
+  padding: 10px;
+  width: 60%;
+  border: 2px solid;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: flex-start;
+  gap: 25px;
+}
+
+.facebook-user-blue {
+  background-color: #61dafb;
+  margin-top: 30px;
+  margin-bottom: 30px;
+  margin-left: 20px;
+  padding: 10px;
+  width: 60%;
+  border: 2px solid;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: flex-start;
+  gap: 25px;
+}
+
+.facebook{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+}
+
+.facebook-user-info{
+  text-align: left;
+  font-size: 1.5em;
+}
+
+
+.facebook-user-info p{
+  margin: 5px;
+}
+
+.green-input{
+  border: 1.5px solid;
+  border-radius: 10px;
+  border-color: green;
+}
+
+.orange-input{
+  border: 1.5px solid;
+  border-radius: 10px;
+  border-color: orange;
+}
+
+.red-input{
+  border: 1.5px solid;
+  border-radius: 10px;
+  border-color: red;
+}
+
+.regular-input{
+  border: 1.5px solid;
+  border-radius: 10px;
+}
+
+select{
+  border-radius: 10px;
+}
+
+.square{
+  height: 50px;
+  width: 50px;
+  background-color: #555;
 }
 
