--- a/src/App.css
+++ b/src/App.css
@@ -181,3 +181,93 @@ select{
   background-color: #555;
 }
 
+.all-colors{
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+}
+
+.single-color{
+  display: flex;
+  flex-wrap: nowrap;
+  gap: 10px;
+  padding: 20px;
+  align-items: center;
+  }
+
+.all-colors-container{
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  align-items: center;
+}
+
+.single-color-container{
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.sign-up-form{
+  width: 20%;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  align-items: center;
+}
+
+.sign-up-form button{
+  width: 30%;
+  margin-top: 30px;
+}
+
+.form-container, .driver-box-container, .box-color-container {
+  display: flex;
+  justify-content: center;
+}
+
+.hr{
+  height: 1px;
+}
+
+.credit-card{
+  display: flex;
+  width: 40%;
+  border-radius: 10px;
+  flex-direction: column;
+  flex-wrap: nowrap;
+}
+
+.credit-card-container{
+  display: flex;
+  justify-content: center;
+}
+
+.credit-card img{
+  width: 100px;
+  display: flex;
+  flex-wrap: nowrap;
+  flex-direction: column;
+  align-self: flex-end;
+  padding: 20px;
+}
+
+.card-number{
+  font-size: 2.5em;
+  margin-top: -5px;
+  padding: 20px;
+}
+
+.card-info{
+  text-align: left;
+  display: flex;
+  flex-direction: column;
+  align-self: flex-start;
+  margin-top: -20px;
+  margin-left: 30px;
+  padding-bottom: 20px;
+}
+
+.card-info p{
+  margin-top: -5px;
+}
